# trade-clone-engine

./: .env.example  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  codecov.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 0001_init.py
config/: wallets.example.yaml  wallets.yaml
scripts/: import_wallets.py
services/api/: Dockerfile  main.py
services/discover/: Dockerfile  main.py
services/executor/: Dockerfile  main.py
services/solana_executor/: Dockerfile  main.py
services/solana_watcher/: Dockerfile  main.py
services/solana_watcher_subscribe/: Dockerfile  main.py
services/watcher/: Dockerfile  main.py
tests/: test_basic.py  test_birdeye_source.py  test_config_and_api.py  test_discovery_utils.py  test_import_wallets_script.py  test_nansen_more.py  test_nansen_source.py  test_solana_backfill.py  test_solana_run_polling.py  test_sources_misc.py
trade_clone_engine/: __init__.py  config.py  db.py
trade_clone_engine/abi/: erc20.json  uniswap_v2_router.json  uniswap_v3_quoter.json  uniswap_v3_router.json
trade_clone_engine/aggregators/: jupiter.py  oneinch.py  zeroex.py
trade_clone_engine/analytics/: metrics.py  pricing.py
trade_clone_engine/chains/: evm.py  solana.py  solana_watcher.py
trade_clone_engine/discovery/: runner.py  sources.py
(+8 files in other folders)
